fix(trainingAndQualsSnaggingList): Moved the rest of training and quals to use queryparams and fixed broken tests as a result, fixed certificate name typo, fixed training name typo, fixed training and quals header size and fixed spacing for training and quals header

--- a/src/app/features/training-and-qualifications/expired-and-expiring-training/expired-and-expiring-training.component.html
+++ b/src/app/features/training-and-qualifications/expired-and-expiring-training/expired-and-expiring-training.component.html
@@ -90,9 +90,9 @@
                     'training-and-qualifications-record',
                     worker.uid,
                     'training',
-                    training.uid,
-                    { trainingCategory: training.category | json }
+                    training.uid
                   ]"
+                  [quryParams]="{ trainingCategory: training.category | json }"
                   >Update</a
                 >
               </div>
