--- a/src/app/features/training-and-qualifications/missing-mandatory-training/missing-mandatory-training-status.component.html
+++ b/src/app/features/training-and-qualifications/missing-mandatory-training/missing-mandatory-training-status.component.html
@@ -86,9 +86,9 @@
                     workplaceUid,
                     'training-and-qualifications-record',
                     worker.uid,
-                    'add-training',
-                    { trainingCategory: training | json }
+                    'add-training'
                   ]"
+                  [queryParams]="{ trainingCategory: training | json }"
                   >Add</a
                 >
               </div>
