--- a/src/app/features/workers/new-training-qualifications-record/new-qualifications/new-qualifications.component.html
+++ b/src/app/features/workers/new-training-qualifications-record/new-qualifications/new-qualifications.component.html
@@ -10,7 +10,7 @@
         </caption>
         <thead class="govuk-table__head">
           <tr class="govuk-table__row">
-            <th scope="col" class="govuk-table__header" scope="col" style="width: 30%">Certificate Name</th>
+            <th scope="col" class="govuk-table__header" scope="col" style="width: 30%">Certificate name</th>
             <th scope="col" class="govuk-table__header" scope="col" style="width: 16.5%">Year achieved</th>
             <th scope="col" class="govuk-table__header" scope="col" style="width: 53.5%">Notes</th>
           </tr>
