--- a/src/app/shared/components/training-and-qualifications-categories/view-trainings/view-trainings.component.html
+++ b/src/app/shared/components/training-and-qualifications-categories/view-trainings/view-trainings.component.html
@@ -99,9 +99,9 @@
                   workplace.uid,
                   'training-and-qualifications-record',
                   training.worker.uid,
-                  'add-training',
-                  { trainingCategory: { id: trainingCategoryId, category: category } | json }
+                  'add-training'
                 ]"
+                [queryParams]="{ trainingCategory: { id: trainingCategoryId, category: category } | json }"
                 >Add</a
               >
             </div>
@@ -114,9 +114,9 @@
                   'training-and-qualifications-record',
                   training.worker.uid,
                   'training',
-                  training.uid,
-                  { trainingCategory: { id: trainingCategoryId, category: category } | json }
+                  training.uid
                 ]"
+                [queryParams]="{ trainingCategory: { id: trainingCategoryId, category: category } | json }"
                 >Update</a
               >
             </div>
