--- a/src/app/features/workers/new-training-qualifications-record/new-training/new-training.component.html
+++ b/src/app/features/workers/new-training-qualifications-record/new-training/new-training.component.html
@@ -13,7 +13,7 @@
         </caption>
         <thead class="govuk-table__head">
           <tr class="govuk-table__row">
-            <th scope="col" class="govuk-table__header" scope="col" style="width: 30%">Training Name</th>
+            <th scope="col" class="govuk-table__header" scope="col" style="width: 30%">Training name</th>
             <th scope="col" class="govuk-table__header" scope="col" style="width: 16.5%">Accredited</th>
             <th scope="col" class="govuk-table__header" scope="col" style="width: 20%">Completion date</th>
             <th scope="col" class="govuk-table__header" scope="col" style="width: 16.5%">Expriy date</th>
