--- a/src/app/features/new-dashboard/workplace-tab/workplace-tab.component.html
+++ b/src/app/features/new-dashboard/workplace-tab/workplace-tab.component.html
@@ -1,4 +1,4 @@
-<app-new-dashboard-header></app-new-dashboard-header>
+<app-new-dashboard-header [tab]="'workplace'"></app-new-dashboard-header>
 <div class="govuk-width-container govuk-!-margin-top-9">
   <app-new-workplace-summary
     [workplace]="workplace"
