--- a/src/app/shared/components/benchmarks-tab/comparison-group-header/comparison-group-header.component.html
+++ b/src/app/shared/components/benchmarks-tab/comparison-group-header/comparison-group-header.component.html
@@ -1,23 +1,19 @@
-<div class="govuk-grid-row">
-  <div class="govuk-grid-column-two-thirds" data-testid="comparison-group-text">
-    <p *ngIf="meta && meta.staff && meta.workplaces; else noCompGroup">
-      <b>Your comparison group</b> is {{ meta.staff | number }} staff from {{ meta.workplaces | number }}
-      {{ pluralizeWorkplaces(meta.workplaces) }} providing the same main service as you in your local authority.
-      <span *ngIf="meta.lastUpdated">
-        The comparison group data was last updated {{ meta.lastUpdated | date: 'd MMMM yyyy' }}.
-      </span>
-    </p>
-    <ng-template #noCompGroup>
-      <p><b>Your comparison group</b> information is not available at the moment.</p>
-    </ng-template>
-  </div>
-  <div class="govuk-grid-column-one-thirds">
-    <a
-      class="asc-font-19"
-      data-html2canvas-ignore
-      [routerLink]="['/workplace', workplaceID, 'benchmarks', 'about-the-data']"
-      (click)="setReturn()"
-      >About the data</a
-    >
-  </div>
+<div class="govuk-grid-column-two-thirds" data-testid="comparison-group-text">
+  <p>
+    <ng-container *ngIf="meta && meta.staff && meta.workplaces; else noCompGroup">
+      <ng-container *ngIf="canViewFullContent">
+        <b>Your comparison group</b> is {{ meta.staff | number }} staff from {{ meta.workplaces | number }}
+
+        {{ pluralizeWorkplaces(meta.workplaces) }} providing the same main service as you in your local authority.
+        <span *ngIf="meta.lastUpdated">
+          The comparison group data was last updated {{ meta.lastUpdated | date: 'd MMMM yyyy' }}.
+        </span>
+      </ng-container>
+      <ng-container *ngIf="!canViewFullContent">
+        <b>Your comparison group</b> is {{ meta.staff | number }} staff from {{ meta.workplaces | number }} workplaces
+        using ASC-WDS and providing adult social care in your local authority.
+      </ng-container>
+    </ng-container>
+    <ng-template #noCompGroup> <b>Your comparison group</b> information is not available at the moment. </ng-template>
+  </p>
 </div>
