--- a/src/app/features/workers/add-edit-qualification/add-edit-qualification.component.html
+++ b/src/app/features/workers/add-edit-qualification/add-edit-qualification.component.html
@@ -26,7 +26,7 @@
     >
   </div>
 </div>
-<form *ngIf="!qualificationId || (qualificationId && record)" (ngSubmit)="onSubmit()" [formGroup]="form">
+<form *ngIf="!qualificationId || (qualificationId && record)" (ngSubmit)="onSubmit()" [formGroup]="form" #formEl>
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds-from-desktop">
       <div class="govuk-form-group" [class.govuk-form-group--error]="submitted && form.invalid">
