add conditional date to the staff tab header

--- a/src/app/features/new-dashboard/dashboard/dashboard.component.html
+++ b/src/app/features/new-dashboard/dashboard/dashboard.component.html
@@ -10,6 +10,7 @@
     [workplace]="workplace"
     [workers]="workers"
     [workerCount]="workerCount"
+    [staffLastUpdated]="staffLastUpdatedDate"
   ></app-new-staff-tab>
   <app-new-training-tab *ngSwitchCase="'training-and-qualifications'" [workplace]="workplace"></app-new-training-tab>
   <app-new-benchmarks-tab *ngSwitchCase="'benchmarks'" class="asc-benchmarks-tab"></app-new-benchmarks-tab>
