--- a/src/app/features/new-dashboard/staff-tab/staff-tab.component.html
+++ b/src/app/features/new-dashboard/staff-tab/staff-tab.component.html
@@ -1,4 +1,8 @@
-<app-new-dashboard-header [tab]="'staff-records'" [canAddWorker]="canAddWorker"></app-new-dashboard-header>
+<app-new-dashboard-header
+  [tab]="'staff-records'"
+  [canAddWorker]="canAddWorker"
+  [updatedDate]="staffLastUpdated"
+></app-new-dashboard-header>
 <div class="govuk-width-container govuk-!-margin-top-7">
   <ng-container *ngIf="workers?.length > 0; else noStaffRecords">
     <div data-testid="staff-records">
