--- a/src/app/features/new-dashboard/dashboard-header/dashboard-header.component.html
+++ b/src/app/features/new-dashboard/dashboard-header/dashboard-header.component.html
@@ -16,9 +16,9 @@
           </ng-template>
           <p class="govuk-!-font-size-16 govuk-!-margin-top-2 govuk-!-margin-bottom-0">
             <span class="govuk-!-margin-right-2">Workplace ID: {{ workplace?.nmdsId }}</span>
-            <span *ngIf="tab !== 'home'" data-testid="separator">|</span>
-            <span *ngIf="showLastUpdatedDate" class="govuk-!-margin-left-2" data-testid="lastUpdatedDate"
-              >Last update, {{ workplace?.updated | date: 'd MMMM y' }}
+            <span *ngIf="updatedDate" data-testid="separator">|</span>
+            <span *ngIf="updatedDate" class="govuk-!-margin-left-2" data-testid="lastUpdatedDate"
+              >Last update, {{ updatedDate | date: 'd MMMM y' }}
             </span>
           </p>
         </div>
