--- a/src/app/features/workplace/leavers/leavers.component.html
+++ b/src/app/features/workplace/leavers/leavers.component.html
@@ -21,6 +21,12 @@
             </h1>
           </legend>
           <p>These should only be leavers who were permanent or temporary staff.</p>
+          <app-details [title]="'Why we ask for this information'">
+            <p>
+              To show DHSC and the government the size of staff retention issues and help them make national and local
+              policy and funding decisions.
+            </p>
+          </app-details>
           <ng-container formArrayName="leavers">
             <div
               *ngFor="let leaver of leavers.controls; let i = index"
