--- a/src/app/features/workplace/vacancies/vacancies.component.html
+++ b/src/app/features/workplace/vacancies/vacancies.component.html
@@ -19,6 +19,12 @@
             <h1 class="govuk-fieldset__heading">Add your current staff vacancies</h1>
           </legend>
           <p>These should only be vacancies for permanent or temporary staff.</p>
+          <app-details [title]="'Why we ask for this information'">
+            <p>
+              To show DHSC and others how the level of staff vacancies and the number employed affects the sector over
+              time.
+            </p>
+          </app-details>
           <ng-container formArrayName="vacancies">
             <div
               *ngFor="let vacancy of vacanciesArray.controls; let i = index"
