fix queryParams error in expired and expiring training html file

--- a/src/app/features/training-and-qualifications/expired-and-expiring-training/expired-and-expiring-training.component.html
+++ b/src/app/features/training-and-qualifications/expired-and-expiring-training/expired-and-expiring-training.component.html
@@ -92,7 +92,7 @@
                     'training',
                     training.uid
                   ]"
-                  [quryParams]="{ trainingCategory: training.category | json }"
+                  [queryParams]="{ trainingCategory: training.category | json }"
                   >Update</a
                 >
               </div>
