remove query params from the update links for editing training

--- a/src/app/shared/directives/add-edit-training/add-edit-training.component.html
+++ b/src/app/shared/directives/add-edit-training/add-edit-training.component.html
@@ -14,7 +14,7 @@
           <span class="govuk-!-font-weight-bold">Number of staff selected:</span> {{ workerCount }}
           <a class="govuk-link govuk-!-margin-left-4" [routerLink]="['..', 'select-staff']">Change</a>
         </p>
-        <ng-container *ngIf="!trainingCategory; else noDropdown">
+        <ng-container *ngIf="!trainingCategory && !trainingRecordId; else noDropdown">
           <div class="govuk-form-group" [class.govuk-form-group--error]="submitted && form.get('category').invalid">
             <label class="govuk-label" for="category"> Training category </label>
             <span *ngIf="submitted && form.get('category').invalid" id="category-error" class="govuk-error-message">
@@ -38,7 +38,7 @@
         <ng-template #noDropdown>
           <p class="govuk-body govuk-!-margin-bottom-6" data-testid="trainingCategoryDisplay">
             <span class="govuk-util__block"><b>Training category</b></span>
-            <span class="govuk-util__block govuk-!-margin-top-2">{{ trainingCategory.category }}</span>
+            <span class="govuk-util__block govuk-!-margin-top-2">{{ category }}</span>
           </p>
         </ng-template>
 
