change question text for leavers, starters and vacancies

--- a/src/app/features/workplace/starters/starters.component.html
+++ b/src/app/features/workplace/starters/starters.component.html
@@ -16,13 +16,13 @@
         >
           <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
             <span class="govuk-caption-l" data-testid="section-heading">{{ section }}</span>
-            <h1 class="govuk-fieldset__heading">Add your new starters from the <br />last 12 months</h1>
+            <h1 class="govuk-fieldset__heading">How many new starters have you had in the last 12 months?</h1>
           </legend>
           <p>These should only be new starters who are permanent or temporary staff.</p>
           <app-details [title]="'Why we ask for this information'">
             <p>
               To see if the care sector is attracting new workers and see whether DHSC and the government's national and
-              local recruitment plans are working.
+              local recruitment plans <br />are working.
             </p>
           </app-details>
           <ng-container formArrayName="starterRecords">
