--- a/src/app/features/workplace/vacancies/vacancies.component.html
+++ b/src/app/features/workplace/vacancies/vacancies.component.html
@@ -16,7 +16,7 @@
         >
           <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
             <span class="govuk-caption-l" data-testid="section-heading">{{ section }}</span>
-            <h1 class="govuk-fieldset__heading">Add your current staff vacancies</h1>
+            <h1 class="govuk-fieldset__heading">How many current staff vacancies do you have?</h1>
           </legend>
           <p>These should only be vacancies for permanent or temporary staff.</p>
           <app-details [title]="'Why we ask for this information'">
