--- a/src/app/features/workplace/leavers/leavers.component.html
+++ b/src/app/features/workplace/leavers/leavers.component.html
@@ -17,7 +17,7 @@
           <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
             <h1 class="govuk-fieldset__heading">
               <span class="govuk-caption-l" data-testid="section-heading">{{ section }}</span>
-              Add your staff leavers from the last 12 months
+              How many staff leavers have you had in the last 12 months?
             </h1>
           </legend>
           <p>These should only be leavers who were permanent or temporary staff.</p>
