edit dashboard header for training and quals, add breadcrumb to t and q tab, add html on t and q tab for when there are no staff records

--- a/src/app/features/new-dashboard/dashboard/dashboard.component.html
+++ b/src/app/features/new-dashboard/dashboard/dashboard.component.html
@@ -12,6 +12,13 @@
     [workerCount]="workerCount"
     [staffLastUpdated]="staffLastUpdatedDate"
   ></app-new-staff-tab>
-  <app-new-training-tab *ngSwitchCase="'training-and-qualifications'" [workplace]="workplace"></app-new-training-tab>
+  <app-new-training-tab
+    *ngSwitchCase="'training-and-qualifications'"
+    [workplace]="workplace"
+    [workers]="workers"
+    [workerCounts]="workerCount"
+    [trainingCounts]="trainingCount"
+    [tandQsLastUpdated]="tAndQsLastUpdated"
+  ></app-new-training-tab>
   <app-new-benchmarks-tab *ngSwitchCase="'benchmarks'" class="asc-benchmarks-tab"></app-new-benchmarks-tab>
 </div>
