--- a/src/app/features/new-dashboard/dashboard-header/dashboard-header.component.html
+++ b/src/app/features/new-dashboard/dashboard-header/dashboard-header.component.html
@@ -2,7 +2,10 @@
   <div>
     <div class="govuk-width-container">
       <div class="govuk-grid-row govuk-!-padding-bottom-6 govuk__flex govuk__align-items-flex-end">
-        <div class="govuk-grid-column-one-half">
+        <div
+          [ngClass]="tab === 'home' ? 'govuk-grid-column-one-half' : 'govuk-grid-column-two-thirds'"
+          data-testid="column-one"
+        >
           <ng-container *ngIf="tab === 'home'; else otherTab">
             <h1 class="govuk-heading-l govuk-!-margin-bottom-0">
               {{ workplace?.name }}
@@ -11,7 +14,7 @@
           <ng-template #otherTab>
             <h1 class="govuk-heading-l govuk-!-margin-bottom-0">
               <span class="govuk-caption-xl govuk-!-margin-bottom-0">{{ workplace?.name }}</span>
-              {{ tabsMap[tab] }}
+              {{ header }}
             </h1>
           </ng-template>
           <p class="govuk-!-font-size-16 govuk-!-margin-top-2 govuk-!-margin-bottom-0">
@@ -22,26 +25,49 @@
             </span>
           </p>
         </div>
-        <div class="govuk-grid-column-one-half">
-          <div class="govuk-util__float-right" *ngIf="tab === 'home'" data-testid="contact-info">
-            <h2 class="govuk-heading-s govuk-!-margin-bottom-0">Contact Skills for Care</h2>
-            <p class="govuk-!-font-size-16 govuk-!-margin-top-2 govuk-!-margin-bottom-0">
-              <span class="govuk-!-margin-right-2">0113 241 0969</span> |
-              <span class="govuk-!-margin-left-2">
-                <a href="mailto:ascwds-support@skillsforcare.org.uk">ascwds-support@skillsforcare.org.uk</a>
-              </span>
-            </p>
-          </div>
-          <div *ngIf="tab === 'staff-records' && canAddWorker" class="govuk-util__align-right">
-            <a
-              role="button"
-              draggable="false"
-              class="govuk-button"
-              [routerLink]="['/workplace', this.workplace.uid, 'staff-record', 'create-staff-record']"
-            >
-              Add a staff record
-            </a>
-          </div>
+        <div
+          [ngClass]="tab === 'home' ? 'govuk-grid-column-one-half' : 'govuk-grid-column-one-third'"
+          data-testid="column-two"
+        >
+          <ng-container [ngSwitch]="tab">
+            <ng-container *ngSwitchCase="'home'">
+              <div class="govuk-util__float-right" *ngIf="tab === 'home'" data-testid="contact-info">
+                <h2 class="govuk-heading-s govuk-!-margin-bottom-0">Contact Skills for Care</h2>
+                <p class="govuk-!-font-size-16 govuk-!-margin-top-2 govuk-!-margin-bottom-0">
+                  <span class="govuk-!-margin-right-2">0113 241 0969</span> |
+                  <span class="govuk-!-margin-left-2">
+                    <a href="mailto:ascwds-support@skillsforcare.org.uk">ascwds-support@skillsforcare.org.uk</a>
+                  </span>
+                </p>
+              </div>
+            </ng-container>
+
+            <ng-container *ngSwitchCase="'staff-records'">
+              <div *ngIf="canAddWorker" class="govuk-util__align-right">
+                <a
+                  role="button"
+                  draggable="false"
+                  class="govuk-button"
+                  [routerLink]="['/workplace', this.workplace.uid, 'staff-record', 'create-staff-record']"
+                >
+                  Add a staff record
+                </a>
+              </div>
+            </ng-container>
+
+            <ng-container *ngSwitchCase="'training-and-qualifications'">
+              <div *ngIf="hasWorkers && canEditWorker" class="govuk-util__align-right">
+                <a
+                  role="button"
+                  href="#"
+                  class="govuk-button"
+                  [routerLink]="['/workplace', workplace.uid, 'add-multiple-training', 'select-staff']"
+                >
+                  Add multiple training records
+                </a>
+              </div>
+            </ng-container>
+          </ng-container>
         </div>
       </div>
     </div>
