add permissions conditions to the tabs and write tests for rendering tabs

--- a/src/app/features/new-dashboard/dashboard/dashboard.component.html
+++ b/src/app/features/new-dashboard/dashboard/dashboard.component.html
@@ -1,24 +1,41 @@
-<div [ngSwitch]="selectedTab">
-  <app-new-home-tab *ngSwitchCase="'home'" [workplace]="workplace"></app-new-home-tab>
-  <app-new-workplace-tab
-    *ngSwitchCase="'workplace'"
-    [workplace]="workplace"
-    [workerCount]="workerCount"
-  ></app-new-workplace-tab>
-  <app-new-staff-tab
-    *ngSwitchCase="'staff-records'"
-    [workplace]="workplace"
-    [workers]="workers"
-    [workerCount]="workerCount"
-    [staffLastUpdated]="staffLastUpdatedDate"
-  ></app-new-staff-tab>
-  <app-new-training-tab
-    *ngSwitchCase="'training-and-qualifications'"
-    [workplace]="workplace"
-    [workers]="workers"
-    [workerCounts]="workerCount"
-    [trainingCounts]="trainingCount"
-    [tandQsLastUpdated]="tAndQsLastUpdated"
-  ></app-new-training-tab>
-  <app-new-benchmarks-tab *ngSwitchCase="'benchmarks'" class="asc-benchmarks-tab"></app-new-benchmarks-tab>
-</div>
+<ng-container [ngSwitch]="selectedTab">
+  <ng-container *ngSwitchCase="'home'">
+    <app-new-home-tab [workplace]="workplace" data-testid="home-tab"></app-new-home-tab>
+  </ng-container>
+
+  <ng-container *ngSwitchCase="'workplace'">
+    <app-new-workplace-tab
+      *ngIf="canViewEstablishment && workplace"
+      [workplace]="workplace"
+      [workerCount]="workerCount"
+      data-testid="workplace-tab"
+    ></app-new-workplace-tab>
+  </ng-container>
+
+  <ng-container *ngSwitchCase="'staff-records'">
+    <app-new-staff-tab
+      *ngIf="canViewListOfWorkers && workplace"
+      [workplace]="workplace"
+      [workers]="workers"
+      [workerCount]="workerCount"
+      [staffLastUpdated]="staffLastUpdatedDate"
+      data-testid="staff-records-tab"
+    ></app-new-staff-tab>
+  </ng-container>
+
+  <ng-container *ngSwitchCase="'training-and-qualifications'">
+    <app-new-training-tab
+      *ngIf="canViewListOfWorkers && workplace"
+      [workplace]="workplace"
+      [workers]="workers"
+      [workerCounts]="workerCount"
+      [trainingCounts]="trainingCounts"
+      [tandQsLastUpdated]="tAndQsLastUpdated"
+      data-testid="training-and-qualifications-tab"
+    ></app-new-training-tab>
+  </ng-container>
+
+  <ng-container *ngSwitchCase="'benchmarks'">
+    <app-new-benchmarks-tab class="asc-benchmarks-tab" data-testid="benchmarks-tab"></app-new-benchmarks-tab>
+  </ng-container>
+</ng-container>
