fix(trainingAndQualsSnaggingListV2): Fixed visual bugs and changed how the delete banner works

--- a/src/app/features/workers/long-term-absence/long-term-absence.component.html
+++ b/src/app/features/workers/long-term-absence/long-term-absence.component.html
@@ -2,9 +2,9 @@
 </app-error-summary>
 
 <form #formEl novalidate (ngSubmit)="onSubmit()" [formGroup]="form" id="server-error">
-  <div class="govuk-grid">
-    <div class="govuk-grid-column-three-quarters-from-desktop">
-      <span class="govuk-caption-xl">{{ worker.nameOrId }}</span>
+  <div class="govuk-grid-row">
+    <div class="govuk-grid-column-two-thirds-from-desktop">
+      <span class="govuk-caption-l">{{ worker.nameOrId }}</span>
       <h1 class="govuk-heading-l">Flag long-term absence</h1>
 
       <p class="govuk-!-padding-top-3 govuk-!-padding-bottom-3 govuk-!-margin-bottom-6">
