--- a/src/app/features/workers/add-edit-qualification/add-edit-qualification.component.html
+++ b/src/app/features/workers/add-edit-qualification/add-edit-qualification.component.html
@@ -2,7 +2,7 @@
 <div *ngIf="worker" class="govuk-grid-row govuk-!-margin-bottom-0">
   <div class="govuk-grid-column-full">
     <div class="govuk-!-margin-bottom-0">
-      <span class="govuk-caption-xl" data-testid="workerNameAndRole">{{ worker.nameOrId }}</span>
+      <span class="govuk-caption-l" data-testid="workerNameAndRole">{{ worker.nameOrId }}</span>
     </div>
   </div>
 </div>
@@ -79,7 +79,7 @@
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds-from-desktop">
       <div class="govuk-button-group govuk-!-margin-top-4">
-        <button type="submit" class="govuk-button govuk-!-margin-right-5">Save and return</button>
+        <button type="submit" class="govuk-button govuk-!-margin-right-5">{{ buttonText }}</button>
         <a
           class="govuk-button govuk-button--link govuk-!-margin-left-9"
           role="button"
