create new training link panel and render from within the training and quals tab

--- a/src/app/features/new-dashboard/dashboard/dashboard.component.html
+++ b/src/app/features/new-dashboard/dashboard/dashboard.component.html
@@ -28,7 +28,7 @@
       *ngIf="canViewListOfWorkers && workplace"
       [workplace]="workplace"
       [workers]="workers"
-      [workerCounts]="workerCount"
+      [workerCount]="workerCount"
       [trainingCounts]="trainingCounts"
       [tandQsLastUpdated]="tAndQsLastUpdated"
       data-testid="training-and-qualifications-tab"
