add last t and q date to tab, write tests for the t and q link panel

--- a/src/app/features/new-dashboard/dashboard/dashboard.component.html
+++ b/src/app/features/new-dashboard/dashboard/dashboard.component.html
@@ -30,7 +30,7 @@
       [workers]="workers"
       [workerCount]="workerCount"
       [trainingCounts]="trainingCounts"
-      [tandQsLastUpdated]="tAndQsLastUpdated"
+      [tAndQsLastUpdated]="tAndQsLastUpdated"
       data-testid="training-and-qualifications-tab"
     ></app-new-training-tab>
   </ng-container>
