--- a/src/app/features/activate-user-account/confirm-account-details/confirm-account-details.component.html
+++ b/src/app/features/activate-user-account/confirm-account-details/confirm-account-details.component.html
@@ -8,7 +8,10 @@
 
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-full-from-desktop">
-    <h1 class="govuk-heading-l govuk-!-margin-bottom-7">Confirm your account details</h1>
+    <h1 class="govuk-heading-l govuk-!-margin-bottom-7">
+      <span class="govuk-caption-l">Summary</span>
+      Confirm your account details
+    </h1>
   </div>
 </div>
 
