fix the termsand condition checkbox to prevent the data from submiting when its not checked

--- a/src/app/features/activate-user-account/confirm-account-details/confirm-account-details.component.html
+++ b/src/app/features/activate-user-account/confirm-account-details/confirm-account-details.component.html
@@ -54,6 +54,7 @@
             id="termsAndConditions"
             name="termsAndConditions"
             type="checkbox"
+            (click)="setTermsAndConditionsCheckbox()"
             [formControlName]="'termsAndConditions'"
             data-testid="checkbox"
           />
