fix typos on training tab

--- a/src/app/features/new-dashboard/training-tab/training-tab.component.html
+++ b/src/app/features/new-dashboard/training-tab/training-tab.component.html
@@ -63,18 +63,18 @@
     <ng-template #noStaffRecords>
       <div data-testid="no-staff-records">
         <app-inset-text color="warning" [removeTopMargin]="true"
-          >You need to <a href="#" (click)="navigateToStaffRecords($event)">add staff records</a> before you can add
-          training and qualification records.</app-inset-text
+          >You need to <a href="#" (click)="navigateToStaffRecords($event)">add some staff records</a> before you can
+          add training and qualification records</app-inset-text
         >
         <div class="govuk-grid-row">
           <div class="govuk-grid-column-three-quarters">
             <h2 class="govuk-!-margin-bottom-6">Why add training and qualification records in ASC-WDS?</h2>
             <p>
-              This training and qualifications section allws you to add, store, view and keep track of your staff
+              This training and qualifications section allows you to add, store, view and keep track of your staff
               training.
             </p>
             <p>
-              You can set specific training as mnmdatory for each job role you have, so you'll know when a staff member
+              You can set specific training as mandatory for each job role you have, so you'll know when a staff member
               is missing that training. You will also get alerts when training has expired or is about to expire (you
               can even choose how far in advance to be alerted, so that you can plan in a way that suits your
               organisation).
