--- a/src/app/features/new-dashboard/dashboard/dashboard.component.html
+++ b/src/app/features/new-dashboard/dashboard/dashboard.component.html
@@ -36,6 +36,6 @@
   </ng-container>
 
   <ng-container *ngSwitchCase="'benchmarks'">
-    <app-new-benchmarks-tab class="asc-benchmarks-tab" data-testid="benchmarks-tab"></app-new-benchmarks-tab>
+    <app-new-benchmarks-tab [workplace]="workplace" data-testid="benchmarks-tab"></app-new-benchmarks-tab>
   </ng-container>
 </ng-container>
