remove function call from participation component ngOnDestroy, add date to benchmarks header and put benchmark download link in comparison group header

--- a/src/app/features/new-dashboard/benchmarks-tab/benchmarks-tab.component.html
+++ b/src/app/features/new-dashboard/benchmarks-tab/benchmarks-tab.component.html
@@ -3,9 +3,9 @@
 <div class="govuk-width-container govuk-!-margin-top-7">
   <div id="benchmarks-tiles">
     <app-new-comparison-group-header
-      #comparisonGroupText
       [meta]="tilesData?.meta"
       [workplaceID]="workplace.uid"
+      (downloadPDF)="downloadAsPDF()"
     ></app-new-comparison-group-header>
     <div class="govuk-grid-row">
       <app-benchmark-tile
