add tests for comparison group headers, dashboard header and benchmarks tab, move permissions from benchmarks route to individual routes on the benchmarks route

--- a/src/app/features/new-dashboard/benchmarks-tab/benchmarks-tab.component.html
+++ b/src/app/features/new-dashboard/benchmarks-tab/benchmarks-tab.component.html
@@ -1,4 +1,4 @@
-<app-new-dashboard-header [tab]="'benchmarks'"></app-new-dashboard-header>
+<app-new-dashboard-header [tab]="'benchmarks'" [updatedDate]="tilesData?.meta.lastUpdated"></app-new-dashboard-header>
 
 <div class="govuk-width-container govuk-!-margin-top-7">
   <div id="benchmarks-tiles">
