--- a/src/app/features/notifications/notification-list/notification-list.component.html
+++ b/src/app/features/notifications/notification-list/notification-list.component.html
@@ -1,26 +1,64 @@
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-two-thirds">
-    <h1 class="govuk-heading-l">
-      <span class="govuk-caption-xl">{{ workplace?.name }}</span>
-      All notifications <span class="govuk-body-l">({{ notifications.length }})</span>
+    <h1 class="govuk-heading-l govuk-!-margin-bottom-1">
+      <span class="govuk-caption-l">{{ workplace?.name }}</span>
+      Notifications ({{ notifications.length }})
     </h1>
   </div>
 </div>
-<table class="govuk-table govuk-table__with-action">
+<div class="govuk-grid-row">
+  <div class="govuk-grid-column-one-third govuk-!-margin-top-7">
+    <p class="govuk-body-m">Select which notifications to delete</p>
+  </div>
+  <div class="govuk-grid-column-one-third govuk-!-margin-top-6 govuk-!-padding-left-0">
+    <a
+      class="govuk-button govuk-button--link govuk__flex govuk__align-items-center govuk-!-margin-bottom-1"
+      draggable="false"
+      href="#"
+      data-testid="deleteButton"
+    >
+      <img src="/assets/images/bin.svg" alt="" />
+      <span class="govuk-!-margin-left-1"> Delete notifications </span></a
+    >
+  </div>
+  <div class="govuk-grid-column-one-third">
+    <label class="govuk-label" for="sortBy"> Sort by </label>
+    <select class="govuk-select govuk-!-width-full" id="sortBy" name="sortBy">
+      <option *ngFor="let option of ['Latest', 'Unread', 'Read'] | keyvalue" value="{{ option.key }}">
+        {{ option.value }}
+      </option>
+    </select>
+  </div>
+</div>
+<table class="govuk-table govuk-table__with-action govuk-!-margin-top-0">
   <thead class="govuk-table__head">
     <tr class="govuk-table__row">
-      <th scope="col" class="govuk-table__header">Subject</th>
-      <th scope="col" class="govuk-table__header">Date</th>
+      <th scope="col" class="govuk-table__header" style="width: 5%">
+        <input
+          class="notification-checkbox"
+          id="selectAllCheckBoxes"
+          name="selectAllCheckBoxes"
+          type="checkbox"
+          data-testid="selectAllCheckBoxes"
+        />
+      </th>
+      <th scope="col" class="govuk-table__header" style="width: 47.5%">Subject</th>
+      <th scope="col" class="govuk-table__header" style="width: 47.5%">Date received</th>
     </tr>
   </thead>
   <tbody class="govuk-table__body">
-    <ng-container *ngFor="let notification of notifications">
+    <ng-container *ngFor="let notification of notifications; index as i">
       <tr class="govuk-table__row notification-list-row" [class.notification-list-row--unread]="!notification.isViewed">
         <td class="govuk-table__cell">
+          <input id="checkbox-{{ i }}" name="checkbox-{{ i }}" type="checkbox" data-testid="checkbox-{{ i }}" />
+        </td>
+        <td class="govuk-table__cell">
           <span class="notification-list-item">
-            <span *ngIf="!notification.isViewed" class="notification-list-item__icon">
-              <span class="govuk-visually-hidden">Unread: </span></span
-            >
+            <div *ngIf="!notification.isViewed">
+              <span class="govuk-visually-hidden">Unread: </span>
+              <img src="/assets/images/new-icon.png" alt="" class="notification-list-item__icon" />
+            </div>
+
             <a
               *ngIf="notification.type === 'OWNERCHANGE'"
               [routerLink]="[notification.notificationUid]"
@@ -47,7 +85,7 @@
               *ngIf="notification.type === 'BECOMEAPARENT'"
               [routerLink]="['/notifications', 'notification-become-a-parent', notification.notificationUid]"
               class="notification-list-item__link"
-            >{{ notification.type | notificationType }}</a
+              >{{ notification.type | notificationType }}</a
             >
           </span>
         </td>
