add the benchmark back

--- a/src/app/shared/components/benchmarks-tab/benchmarks-tab.component.html
+++ b/src/app/shared/components/benchmarks-tab/benchmarks-tab.component.html
@@ -6,7 +6,6 @@
 <div class="govuk-grid-row">
   <app-comparison-group-header
     #comparisonGroupText
-    [canViewFullContent]="canViewFullBenchmarks"
     [meta]="tilesData?.meta"
     [workplaceID]="workplace.uid"
   ></app-comparison-group-header>
@@ -41,33 +40,12 @@
   </div>
 
   <div class="govuk-grid-row">
-    <app-benchmark-tile
-      [canViewFullContent]="canViewFullBenchmarks"
-      [content]="payContent"
-      [tile]="payTile"
-      [workplaceID]="workplace.uid"
-    >
+    <app-benchmark-tile [content]="payContent" [tile]="payTile" [workplaceID]="workplace.uid"> </app-benchmark-tile>
+    <app-benchmark-tile [content]="turnoverContent" [tile]="turnoverTile" [workplaceID]="workplace.uid">
     </app-benchmark-tile>
-    <app-benchmark-tile
-      [canViewFullContent]="canViewFullBenchmarks"
-      [content]="turnoverContent"
-      [tile]="turnoverTile"
-      [workplaceID]="workplace.uid"
-    >
+    <app-benchmark-tile [content]="sicknessContent" [tile]="sicknessTile" [workplaceID]="workplace.uid">
     </app-benchmark-tile>
-    <app-benchmark-tile
-      [canViewFullContent]="canViewFullBenchmarks"
-      [content]="sicknessContent"
-      [tile]="sicknessTile"
-      [workplaceID]="workplace.uid"
-    >
-    </app-benchmark-tile>
-    <app-benchmark-tile
-      [canViewFullContent]="canViewFullBenchmarks"
-      [content]="qualificationsContent"
-      [tile]="qualificationsTile"
-      [workplaceID]="workplace.uid"
-    >
+    <app-benchmark-tile [content]="qualificationsContent" [tile]="qualificationsTile" [workplaceID]="workplace.uid">
     </app-benchmark-tile>
   </div>
   <app-benchmarks-about-the-data #aboutData class="hidden" [workplace]="workplace"></app-benchmarks-about-the-data>
