--- a/src/app/features/dashboard/dashboard.component.html
+++ b/src/app/features/dashboard/dashboard.component.html
@@ -38,7 +38,7 @@
         ></app-training-and-qualifications-tab>
       </app-tab>
 
-      <app-tab *ngIf="workplace" [title]="'Benchmarks'">
+      <app-tab *ngIf="workplace && canViewBenchmarks" [title]="'Benchmarks'">
         <app-benchmarks-tab class="asc-benchmarks-tab" [workplace]="workplace"></app-benchmarks-tab>
       </app-tab>
 
