--- a/src/app/features/workplace/view-workplace/view-workplace.component.html
+++ b/src/app/features/workplace/view-workplace/view-workplace.component.html
@@ -57,7 +57,7 @@
           [trainingCounts]="trainingCounts"
         ></app-training-and-qualifications-tab>
       </app-tab>
-      <app-tab [title]="'Benchmarks'">
+      <app-tab *ngIf="canViewBenchmarks" [title]="'Benchmarks'">
         <app-benchmarks-tab class="asc-benchmarks-tab" [workplace]="workplace"></app-benchmarks-tab>
       </app-tab>
       <app-tab *ngIf="canViewListOfUsers" [title]="'Workplace users'" [alert]="false">
