remove border on add staff record button

--- a/src/app/features/new-dashboard/dashboard-header/dashboard-header.component.html
+++ b/src/app/features/new-dashboard/dashboard-header/dashboard-header.component.html
@@ -50,7 +50,7 @@
             </ng-container>
 
             <ng-container *ngSwitchCase="'staff-records'">
-              <div *ngIf="canAddWorker" class="govuk-util__align-right" style="border: 1px solid black">
+              <div *ngIf="canAddWorker" class="govuk-util__align-right">
                 <a
                   role="button"
                   draggable="false"
